# Learning-Lab-Projet

./: Commande_notebook_dans_poetry.txt  Mon_App.py  Notebook.ipynb  Notebook_code.py  README.md  Rapport_analyse.txt  pyproject.toml  requirements.txt
