[tool.poetry]
name = "learning lab"
version = "0.1.0"
description = ""
authors = ["Lakamy THIAM <dthiam2015@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.3"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
plotly = "^6.0.0"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
scipy = "^1.15.2"
jupyter = "^1.1.1"
notebook = "^7.3.2"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
